fix write-message being too high

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2163,7 +2163,7 @@ input.bs-timepicker-field {
 }
 .messages-thread-view {
     //height: 100%;
-    height: calc(83vh - 46px);
+    height: 83vh;
     max-height: 800px;
 }
 .messages-inbox__desktop-column {
